[gd_scene load_steps=6 format=3 uid="uid://cybkisoimdyss"]

[ext_resource type="Script" path="res://UI/UI.gd" id="1_yjney"]
[ext_resource type="PackedScene" uid="uid://lv1vxyokysaq" path="res://Towers/RedTowerPanel.tscn" id="1_yuwu3"]
[ext_resource type="Script" path="res://UI/Buttons/Button1.gd" id="3_h63vh"]
[ext_resource type="PackedScene" uid="uid://ei0bxse2yy6k" path="res://Towers/Nuke/Scenes/NukePanel.tscn" id="3_ysah3"]
[ext_resource type="Script" path="res://UI/Buttons/Button2.gd" id="4_47lpp"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_yjney")

[node name="Panel" type="Panel" parent="."]
offset_left = 2944.0
offset_right = 3584.0
offset_bottom = 1280.0

[node name="FlowContainer" type="FlowContainer" parent="Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 235.0
offset_bottom = 448.0
scale = Vector2(3, 3)
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="RedTowerPanel" parent="Panel/FlowContainer" instance=ExtResource("1_yuwu3")]
layout_mode = 2

[node name="NukePanel" parent="Panel/FlowContainer" instance=ExtResource("3_ysah3")]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="Health" type="Label" parent="."]
offset_top = -24.0
offset_right = 348.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 100
text = "Health:"

[node name="Gold" type="Label" parent="."]
offset_left = 663.0
offset_top = -24.0
offset_right = 914.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 100
text = "Gold:"

[node name="Enemies" type="Label" parent="."]
offset_left = 1936.0
offset_top = -26.0
offset_right = 2434.0
offset_bottom = 111.0
theme_override_font_sizes/font_size = 100
text = "Enemies:"

[node name="FPS" type="Label" parent="."]
offset_left = 2752.0
offset_top = 1896.0
offset_right = 3250.0
offset_bottom = 2033.0
theme_override_font_sizes/font_size = 100
text = "FPS:"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Wave" type="Label" parent="."]
offset_left = 1278.0
offset_top = -25.0
offset_right = 1570.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 100
text = "Wave:
"

[node name="DialogBoxTitle" type="Label" parent="."]
visible = false
offset_left = 896.0
offset_top = 771.0
offset_right = 2688.0
offset_bottom = 1371.0
theme_override_constants/shadow_offset_x = 6
theme_override_font_sizes/font_size = 125
text = "Title
"
horizontal_alignment = 1

[node name="DialogBox" type="HBoxContainer" parent="."]
visible = false
offset_left = 896.0
offset_top = 995.0
offset_right = 2688.0
offset_bottom = 1379.0
theme_override_constants/separation = 289

[node name="MainMenu" type="Button" parent="DialogBox"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Main menu"
script = ExtResource("3_h63vh")

[node name="Quit" type="Button" parent="DialogBox"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Quit game"
script = ExtResource("4_47lpp")

[connection signal="pressed" from="DialogBox/MainMenu" to="DialogBox/MainMenu" method="_on_pressed"]
[connection signal="pressed" from="DialogBox/Quit" to="DialogBox/Quit" method="_on_pressed"]
